--- a/ckanext/amplus/templates-2-10/home/index.html
+++ b/ckanext/amplus/templates-2-10/home/index.html
@@ -10,7 +10,7 @@
     <div class="container-fluid">
       <div class="row">
         <div class="col-lg-10 col-lg-offset-1 w-100 flex-shrink-0 flex-grow-0">
-            <p class="group-heading">{{_("News")}}</p>
+            <p class="group-heading">{{_("Insights")}}</p>
           <div class="row">
               {% for item in blogs %}
                   <div class="col-md-3 col-sm-4 col-xs-12">
