--- a/ckanext/amplus/templates-2-10/home/layout1.html
+++ b/ckanext/amplus/templates-2-10/home/layout1.html
@@ -9,9 +9,9 @@
 <div class="stats-container">
   <div class="container-fluid">
     <div class="row justify-content-center">
-        <p class="group-heading">{{_("Explore Topics")}}</p>
-        {% snippet '/home/snippets/featured_groups.html' %} 
-      </div>
+      <p class="group-heading">{{_("Explore Topics")}}</p>
+      {% snippet '/home/snippets/featured_groups.html' %}
+    </div>
   </div>
 </div>
 
@@ -42,25 +42,26 @@
     <div class="row">
       <div class="toggle-section text-center">
         <ul class="nav nav-tabs nav-justified custom-ui-li">
-          <li>
-            <a class="toggle-view" href="#data" data-toggle="tab">
+          <li id="data-tab" class="nav-item">
+            <a class="toggle-view nav-link" href="#data" data-bs-toggle="tab">
               <p>{{_("Data")}}</p>
             </a>
           </li>
-          <li class="active">
-            <a class="toggle-view" href="#visualize" data-toggle="tab">
+          <li id="visualize-tab" class="nav-item active">
+            <a class="toggle-view nav-link" href="#visualize" data-bs-toggle="tab">
               <p>{{_("Visualize")}}</p>
             </a>
           </li>
-          <li>
-            <a class="toggle-view" href="#locate" data-toggle="tab">
+          <li id="locate-tab" class="nav-item">
+            <a class="toggle-view nav-link" href="#locate" data-bs-toggle="tab">
               <p>{{_("Locate")}}</p>
             </a>
           </li>
         </ul>
       </div>
+
       <div class="tab-content">
-        <div class="data tab-pane fade" id="data">
+        <div class="tab-pane fade" id="data">
           <!-- Latest Datasets Section -->
           {% set recent_datasets = h.amplus_get_recently_updated_datasets() %}
           {% if recent_datasets %}
@@ -69,22 +70,39 @@
             <p class="empty">{{ _('No datasets have been added yet') }}</p>
           {% endif %}
         </div>
-        <div class="data tab-pane active" id="visualize">
-            {% set featured_charts = h.c3charts_featured_charts(4) %}
-            {% if featured_charts %}
-              {% for featured_chart in featured_charts %}
-                {% snippet 'home/snippets/featured_chart_view.html', featured_chart=featured_chart %}
-              {% endfor %}
-            {% else %}
-              <p class="empty">{{ _('No chart views have been created yet') }}</p>
-            {% endif %}
+        <div class="tab-pane fade show active" id="visualize">
+          {% set featured_charts = h.c3charts_featured_charts(4) %}
+          {% if featured_charts %}
+            {% for featured_chart in featured_charts %}
+              {% snippet 'home/snippets/featured_chart_view.html', featured_chart=featured_chart %}
+            {% endfor %}
+          {% else %}
+            <p class="empty">{{ _('No chart views have been created yet') }}</p>
+          {% endif %}
         </div>
-        
-        <div class="data tab-pane fade flex-column flex-align-center" id="locate">
+        <div class="tab-pane fade" id="locate">
           <!-- Map Section -->
-          {% snippet 'snippets/coming_soon.html' %}
+          {% snippet 'snippets/map.html' %}
         </div>
-      </div>
+      </div>  
     </div>
   </div>
 </div>
+
+<script>
+document.addEventListener('DOMContentLoaded', function() {
+  const tabs = document.querySelectorAll('.group-container .toggle-section .nav-item');
+
+  tabs.forEach(tab => {
+    tab.addEventListener('click', function() {
+      // Remove active class from all tabs
+      tabs.forEach(t => {
+        t.classList.remove('active');
+      });
+
+      // Add active class to the clicked tab
+      tab.classList.add('active');
+    });
+  });
+});
+</script>
